...
    modifier: Modifier = Modifier
) {
    if (uiState is HomeUiState.Loading) {
        Spacer(
            modifier = modifier
                .height(280.dp)
                .testTag("home:blurredImageHeaderLoading")
        )
    }
    if (uiState is HomeUiState.Success && uiState.topPicks.isNotEmpty()) {

        Box(modifier = modifier.testTag("home:blurredImageHeader")) {

            val page = pagerState.currentPage % uiState.topPicks.size

            var pageInd by remember { mutableIntStateOf(page) }

            val onUpdate = { pageInd = page }
...
                        horizontal = dimensionResource(id = R.dimen.top_picks_card_min_size) / 2
                    ),
                    verticalAlignment = Alignment.CenterVertically,
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(dimensionResource(id = R.dimen.top_picks_card_max_size))
                        .testTag("home:topPicksLoading")
                ) { page ->
                    AnimationBox(
                        enter = fadeIn(),
                        exit = fadeOut()
                    ) {
                        RectangleRoundedCornerPlaceholder(
...
                        horizontal = dimensionResource(id = R.dimen.top_picks_card_min_size) / 2
                    ),
                    verticalAlignment = Alignment.CenterVertically,
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(dimensionResource(id = R.dimen.top_picks_card_max_size))
                        .testTag("home:topPicks")
                ) { page ->
                    AnimationBox(
                        enter = fadeIn(),
                        exit = fadeOut()
                    ) {
                        FeaturedTrack(
...
                    vertical = dimensionResource(id = R.dimen.padding_small)
                )
        )
        when (uiState) {
            HomeUiState.Loading -> {

                LazyRow(modifier = Modifier.testTag("home:recentlyPlayedLoading")) {
                    items(count = 3) {
                        AnimationBox {
                            RectanglePlaceholder(
                                size = dimensionResource(id = R.dimen.track_card_size),
                                modifier = modifier
                                    .padding(start = 8.dp)
...
                        }
                    }
                }
            }
            is HomeUiState.Success -> {

                LazyRow(modifier = Modifier.testTag("home:recentlyPlayed")) {
                    items(items = recentlyPlayed.itemSnapshotList) { track ->
                        AnimationBox(
                            enter = fadeIn(),
                            exit = fadeOut()
                        ) {
                            TrackCard(
...
